imagebanner changes done

--- a/about.html
+++ b/about.html
@@ -232,6 +232,11 @@
     }
     
     @media (max-width: 768px) { /* Small devices and below */
+      /* .bg-black {
+        margin-left:10px;
+        margin-right:10px;
+      } */
+     
       h1.about-boxtitle {
         font-size: 1.75rem !important; /* Smaller font size for small devices */
         line-height: 2.2rem !important;
@@ -489,6 +494,7 @@
     }
     @media (max-width: 768px) {
         .container-uni {
+          margin-top:-20px;
         background-image: url("./images/about/why choose us.png"); /* Replace with your mobile image URL */
         background-size: 100% 100%; /* Adjust the size of the background image */
         background-position: center;
