--- a/ios-app-development.html
+++ b/ios-app-development.html
@@ -116,7 +116,7 @@ Icon for services and Projects -->
 
         <!--banner section start-->
         <section class="hero-section-pricing"
-            style="background-image: url('./images/development-services/ios-application-development-banner.jpg');">
+            style="background-image: url('./images/bg/IOS-Application-Development-banner.png');">
             <div class="overlay-pricing">
                 <div class="content-pricing">
                     <h1 class="title-pricing dev-title">IOS Application Development</h1>
