--- a/iot-development.html
+++ b/iot-development.html
@@ -137,7 +137,7 @@
 
 
 <section class="banner py-0">
-  <div class="banner-img" style="background-image: url('images/services_Images/IOT/b12.jpg');">
+  <div class="banner-img" style="background-image: url('images/bg/IoT-Development-Services-banner.jpeg');">
     <div class="banner-content">
       <div class="container">
         <div class="row justify-content-center text-center">
