--- a/network-infrastructure.html
+++ b/network-infrastructure.html
@@ -120,7 +120,7 @@ Icon for services and Projects -->
 <!--header end-->
 
 <!--hero section start-->
-<section class="hero-section-pricing" style="background-image: url('./images/bg/network-banner.png');">
+<section class="hero-section-pricing" style="background-image: url('./images/bg/Network-Infrastructure-banner.jpeg');">
     <div class="overlay-pricing">
       <div class="content-pricing">
         <h1 class="title-pricing">Network Infrastructure</h1>
