--- a/facility-maintenance-management-software.html
+++ b/facility-maintenance-management-software.html
@@ -336,7 +336,7 @@ Icon for services and Projects -->
 
 
 <!--hero section start-->
-<div class="pbanner-container" style="background-image: url('images/innomaint/facility-management/B1.jpg'); background-size: cover; background-position: center; background-repeat: no-repeat;">
+<div class="pbanner-container" style="background-image: url('images/bg/Facility-Maintenance-Management-Software-banner.jpg'); background-size: cover; background-position: center; background-repeat: no-repeat;">
   <!-- Content Section -->
   <div class="pbanner-content">
       <h4 class="pbanner-title">  Facility Maintenance Management Software</h4>
@@ -372,8 +372,13 @@ Icon for services and Projects -->
       </form>
   </div>
 </div>
-
-  <section class="pt-10 text-center mt-10" style="background-color: #efefef;">
+  <style>
+    .facility-clients
+    {
+      margin-top:0rem!important;
+    }
+  </style>
+  <section class="pt-10 text-center mt-10 facility-clients" style="background-color: #efefef;">
     <div class="row justify-content-center text-center mb-5">
 
         <div class="col-lg-8 col-md-12">
