--- a/it-governance.html
+++ b/it-governance.html
@@ -168,7 +168,7 @@ Icon for services and Projects -->
 <!--hero section start-->
 <!--hero section start-->
 <section class="banner py-0">
-  <div class="banner-img" style="background-image: url('./images/tech-talent-service/tech-talent-service.jpg');">
+  <div class="banner-img" style="background-image: url('./images/bg/IT-Governance-banner.jpeg');">
     <div class="banner-content">
       <div class="container">
         <div class="row justify-content-center text-center">
