--- a/managedIT.html
+++ b/managedIT.html
@@ -133,7 +133,7 @@
 <!--hero section start-->
 
 <section class="banner py-0">
-  <div class="banner-img" style="background-image: url('images/services_Images/ManagedIT/B1.png');">
+  <div class="banner-img" style="background-image: url('images/bg/Managed-IT-Services-banner.jpg');">
     <div class="banner-content">
       <div class="container">
         <div class="row justify-content-center text-center">
