--- a/procurement-management-software.html
+++ b/procurement-management-software.html
@@ -137,7 +137,7 @@ Icon for services and Projects -->
 
 <!--hero section start-->
 <div class="pbanner-container"
-style="background-image: url('images/innomaint/procurement-management/banner.jpg'); background-size: cover; background-position: center; background-repeat: no-repeat;">
+style="background-image: url('images/bg/Procurement-Management-Software-banner.jpeg'); background-size: cover; background-position: center; background-repeat: no-repeat;">
 <!-- Content Section -->
 <div class="pbanner-content">
   <h4 class="pbanner-title">Procurement Management Software</h4>
