--- a/software-testing.html
+++ b/software-testing.html
@@ -91,7 +91,7 @@ Icon for services and Projects -->
 
 
 <section class="banner py-0">
-  <div class="banner-img" style="background-image: url('images/services_Images/SoftwareTesting/software-testing-banner.jpg');">
+  <div class="banner-img" style="background-image: url('images/bg/Software-Testing-QA-Services-banner.png');">
     <div class="banner-content">
       <div class="container">
         <div class="row justify-content-center text-center">
