--- a/visitor-management-system-software.html
+++ b/visitor-management-system-software.html
@@ -143,7 +143,7 @@
         <!-- Image banner with form section -->
          <!--hero section start-->
  
-<div class="pbanner-container" style="background-image: url('images/Innomiant solutions/visitor-banner.jpg'); background-size: cover; background-position: center; background-repeat: no-repeat;">
+<div class="pbanner-container" style="background-image: url('images/bg/Visitor-Management-System-Software-banner.jpg'); background-size: cover; background-position: center; background-repeat: no-repeat;">
     <!-- Content Section -->
     <div class="pbanner-content">
         <h4 class="pbanner-title">Visitor Management System Software</h4>
