--- a/about.html
+++ b/about.html
@@ -20,6 +20,11 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.6.1/font/bootstrap-icons.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
 
+    <style>
+      *{
+        font-family: Noto Serif, serif !important;
+      }
+    </style>
 
     <!-- Title -->
     <title>SMI - MiddleEast</title>
@@ -61,7 +66,7 @@
 
     <link href="css/logos.css" rel="stylesheet" type="text/css" />
     <link href="css/changes.css" rel="stylesheet" type="text/css" />
-\
+
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
   <!-- AOS -->
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" />
