--- a/index.html
+++ b/index.html
@@ -267,22 +267,22 @@
             <div class="col-12 col-lg-8 ps-lg-8 mt-5 mt-lg-0">
               <div class="row">
                 <div class="col-md-6 org-box animate__animated" data-animate-on-view="image">
-                  <div class="featured-item style-3">
+                  <div class="featured-item style-3-f">
                     <img src="./images/client/techmango-black.png" alt="Company 1" class="orgNew-logo">
                   </div>
                 </div>
                 <div class="col-md-6 mt-5 org-box animate__animated" data-animate-on-view="image">
-                  <div class="featured-item style-3">
+                  <div class="featured-item style-3-f">
                     <img src="./images/client/innomaint-logo.png" alt="Company 2" class="orgNew-logo">
                   </div>
                 </div>
                 <div class="col-md-6 mt-5 mt-lg-0 org-box animate__animated" data-animate-on-view="image">
-                  <div class="featured-item style-3">
+                  <div class="featured-item style-3-f">
                     <img src="./images/client/bautomate-logo.png" alt="Company 3" class="orgNew-logo">
                   </div>
                 </div>
                 <div class="col-md-6 mt-5 org-box animate__animated" data-animate-on-view="image">
-                  <div class="featured-item style-3">
+                  <div class="featured-item style-3-f">
                     <img src="./images/client/devden-black.png" alt="Company 4" class="orgNew-logo">
                   </div>
                 </div>
