--- a/iot-solutions.html
+++ b/iot-solutions.html
@@ -116,7 +116,7 @@
     <!--hero section start-->
 
     <div class="pbanner-container"
-      style="background-image: url('images/Innomiant solutions/iot-banner.jpg'); background-size: cover; background-position: center; background-repeat: no-repeat;">
+      style="background-image: url('images/bg/io-soln-bg.webp'); background-size: cover; background-position: center; background-repeat: no-repeat;">
       <!-- Content Section -->
       <div class="pbanner-content">
         <h4 class="pbanner-title">IoT Solutions</h4>
