video size reduce

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 
       <div id="ht-preloader">
         <div class="loader clear-loader">
-          <img class="img-fluid" src="images/smi-logo.png" alt="Lodaer Img" />
+          <img class="img-fluid" src="images/smi-logo.png" alt="Lodaer Img" loading="lazy"/>
         </div>
       </div>
 
@@ -197,7 +197,7 @@
                   </g>
                 </svg>
                 <div class="text-btn-icon">
-                  <img src="images/smi-icon.png" class="smi-icon-svg" />
+                  <img src="images/smi-icon.png" class="smi-icon-svg" loading="lazy"/>
                   <!-- <i aria-hidden="true" class="flaticon flaticon-brand"></i> -->
                 </div>
               </div>
@@ -206,7 +206,7 @@
         </div>
         <div class="video-bg">
           <video width="100%" height="100%" autoplay loop muted playsinline>
-            <source src="images/home-banner-video.mp4" type="video/mp4" />
+            <source src="images/home-banner-video-new.mp4" type="video/mp4" />
             Your browser does not support the video tag.
           </video>
         </div>
@@ -217,16 +217,16 @@
       <section class="about-abtNew">
         <div class="grid-abtNew">
             <div class="image-box-abtNew large-abtNew" id="hb-img1">
-                <img src="./images/about/smi-1.webp" alt="Client 1">
+                <img src="./images/about/smi-1.webp" alt="Client 1" loading="lazy">
             </div>
             <div class="image-box-abtNew small-abtNew" id="hb-img1">
-                <img src="./images/about/smi-2.webp" alt="Client 2">
+                <img src="./images/about/smi-2.webp" alt="Client 2" loading="lazy">
             </div>
             <!-- <div class="image-box-abtNew medium-abtNew">
                 <img src="./images/about/smi-3.jpg" alt="Client 3">
             </div> -->
             <div class="image-box-abtNew small-abtNew">
-                <img src="./images/about/smi-4.webp" alt="Client 4">
+                <img src="./images/about/smi-4.webp" alt="Client 4" loading="lazy">
             </div>
     
             <div class="intro-box-abtNew">
@@ -235,16 +235,16 @@
             </div>
     
             <div class="image-box-abtNew medium-abtNew" id="hb-img1">
-                <img src="./images/about/smi-5.webp" alt="Client 5">
+                <img src="./images/about/smi-5.webp" alt="Client 5" loading="lazy">
             </div>
             <div class="image-box-abtNew large-abtNew" id="hb-img1">
-                <img src="./images/about/smi-6.webp" alt="Client 1">
+                <img src="./images/about/smi-6.webp" alt="Client 1" loading="lazy">
             </div>
             <div class="image-box-abtNew small-abtNew" id="hb-img1">
-                <img src="./images/about/smi-7.webp" alt="Client 2">
+                <img src="./images/about/smi-7.webp" alt="Client 2" loading="lazy">
             </div>
             <div class="image-box-abtNew medium-abtNew">
-                <img src="./images/about/smi-8.webp" alt="Client 3">
+                <img src="./images/about/smi-8.webp" alt="Client 3" loading="lazy">
             </div>
         </div>
     </section>
@@ -268,22 +268,22 @@
               <div class="row">
                 <div class="col-md-6 org-box animate__animated" data-animate-on-view="image">
                   <div class="featured-item style-3-f">
-                    <img src="./images/client/techmango-black.png" alt="Company 1" class="orgNew-logo">
+                    <img src="./images/client/techmango-black.png" alt="Company 1" class="orgNew-logo" loading="lazy">
                   </div>
                 </div>
                 <div class="col-md-6 mt-5 org-box animate__animated" data-animate-on-view="image">
                   <div class="featured-item style-3-f">
-                    <img src="./images/client/innomaint-logo.png" alt="Company 2" class="orgNew-logo">
+                    <img src="./images/client/innomaint-logo.png" alt="Company 2" class="orgNew-logo" loading="lazy">
                   </div>
                 </div>
                 <div class="col-md-6 mt-5 mt-lg-0 org-box animate__animated" data-animate-on-view="image">
                   <div class="featured-item style-3-f">
-                    <img src="./images/client/bautomate-logo.png" alt="Company 3" class="orgNew-logo">
+                    <img src="./images/client/bautomate-logo.png" alt="Company 3" class="orgNew-logo" loading="lazy">
                   </div>
                 </div>
                 <div class="col-md-6 mt-5 org-box animate__animated" data-animate-on-view="image">
                   <div class="featured-item style-3-f">
-                    <img src="./images/client/devden-black.png" alt="Company 4" class="orgNew-logo">
+                    <img src="./images/client/devden-black.png" alt="Company 4" class="orgNew-logo" loading="lazy">
                   </div>
                 </div>
               </div>
@@ -371,32 +371,34 @@
               <div class="col-12">
                 <div class="marquee-title">
                   <div class="marquee-text">
-                    <img class="cli-logo" src="images/client/Partner-1.webp" />
+                    <img class="cli-logo" src="images/client/Partner-1.webp" loading="lazy"/>
                     <img
                       class="cli-logo"
                       src="images/client/Partner-2.webp"
+                      loading="lazy"
                     /><img
                       class="cli-logo"
                       src="images/client/Partner-3.webp"
+                      loading="lazy"
                     /><img
                       class="cli-logo"
                       src="images/client/Partner-4.webp"
-                    /><img class="cli-logo" src="images/client/Partner-5.webp" />
-                    <img class="cli-logo" src="images/client/Partner-6.webp" />
-                    <img class="cli-logo" src="images/client/Partner-7.webp" />
+                    /><img class="cli-logo" src="images/client/Partner-5.webp" loading="lazy"/>
+                    <img class="cli-logo" src="images/client/Partner-6.webp" loading="lazy"/>
+                    <img class="cli-logo" src="images/client/Partner-7.webp" loading="lazy"/>
                     <img
                       class="cli-logo"
                       src="images/client/Partner-8.webp"
-                    /><img class="cli-logo" src="images/client/Partner-9.webp" />
-                    <img class="cli-logo" src="images/client/Partner-10.webp" />
-                    <img class="cli-logo" src="images/client/Partner-11.webp" />
-                    <img class="cli-logo" src="images/client/Partner-12.webp" />
-                    <img class="cli-logo" src="images/client/Partner-13.webp" />
-                    <img class="cli-logo" src="images/client/Partner-14.webp" />
-                    <img class="cli-logo" src="images/client/Partner-15.webp" />
-                   <img class="cli-logo" src="images/client/Partner-16.webp" />
-                    <img class="cli-logo" src="images/client/Partner-17.webp" />
-                    <img class="cli-logo" src="images/client/Partner-18.webp" />
+                    /><img class="cli-logo" src="images/client/Partner-9.webp" loading="lazy"/>
+                    <img class="cli-logo" src="images/client/Partner-10.webp" loading="lazy"/>
+                    <img class="cli-logo" src="images/client/Partner-11.webp" loading="lazy"/>
+                    <img class="cli-logo" src="images/client/Partner-12.webp" loading="lazy"/>
+                    <img class="cli-logo" src="images/client/Partner-13.webp" loading="lazy"/>
+                    <img class="cli-logo" src="images/client/Partner-14.webp" loading="lazy"/>
+                    <img class="cli-logo" src="images/client/Partner-15.webp" loading="lazy"/>
+                   <img class="cli-logo" src="images/client/Partner-16.webp" loading="lazy"/>
+                    <img class="cli-logo" src="images/client/Partner-17.webp" loading="lazy"/>
+                    <img class="cli-logo" src="images/client/Partner-18.webp" loading="lazy"/>
                   </div>
                 </div>
               </div>
