--- a/Electronic-Data-Interchange.html
+++ b/Electronic-Data-Interchange.html
@@ -108,7 +108,7 @@ Icon for services and Projects -->
 <!--hero section start-->
 <!--hero section start-->
 <section class="banner py-0">
-  <div class="banner-img" style="background-image: url('images/services_Images/EDI/banner-1.jpeg');">
+  <div class="banner-img" style="background-image: url('images/services_Images/EDI/banner-1.webp');">
     <div class="banner-content">
       <div class="container">
         <div class="row justify-content-center text-center">
@@ -327,7 +327,7 @@ Icon for services and Projects -->
           <div class="item">
             <div class="service-item style-2">
               <div class="service-image">
-                <img src="images/services_Images/EDI/d1.jpg" class="img-fluid" alt="Mobile Development">
+                <img src="images/services_Images/EDI/d1.webp" class="img-fluid" alt="Mobile Development">
               </div>
               <div class="service-desc">
                 <h4><a href="">EDI for Healthcare</a></h4>
@@ -348,7 +348,7 @@ Icon for services and Projects -->
           <div class="item">
             <div class="service-item style-2">
               <div class="service-image">
-                <img src="images/services_Images/EDI/d2.jpg" class="img-fluid" alt="Social Media Marketing">
+                <img src="images/services_Images/EDI/d2.webp" class="img-fluid" alt="Social Media Marketing">
               </div>
               <div class="service-desc">
                 <h4><a href="#">EDI for Manufacturing</a></h4>
@@ -369,7 +369,7 @@ Icon for services and Projects -->
           <div class="item">
             <div class="service-item style-2">
               <div class="service-image">
-                <img src="images/services_Images/EDI/d3.jpg" class="img-fluid" alt="Automobile">
+                <img src="images/services_Images/EDI/d3.webp" class="img-fluid" alt="Automobile">
               </div>
               <div class="service-desc">
                 <h4><a href="">EDI for the Automobile Industry</a></h4>
@@ -408,7 +408,7 @@ Icon for services and Projects -->
       </div>
       <div class="modal-body project-modal-body">
         <div class="project-image-container">
-        <img src="images/services_Images/EDI/d1.jpg" alt="Transparency Image" width="600" height="600" class="img-fluid project-image" style="border-radius: 15px;">
+        <img src="images/services_Images/EDI/d1.webp" alt="Transparency Image" width="600" height="600" class="img-fluid project-image" style="border-radius: 15px;">
       </div>
       <div class="project-content">
         <p >For the healthcare industry, SMI implemented distinct modules tailored to various scenarios, ensuring compatibility with existing HSA systems and additional business needs, such as lines of credit. We integrated HSA claims through a horizontal integration design, allowing calculations, transformations, and seamless transmission to online applications. All transformations and mapping rules were designed to maintain EDI compliance.</p>
@@ -428,7 +428,7 @@ Icon for services and Projects -->
       </div>
       <div class="modal-body project-modal-body">
         <div class="project-image-container">
-        <img src="images/services_Images/EDI/d2.jpg" alt="Delivery Image" width="600" height="600" class="img-fluid project-image" style="border-radius: 15px;">
+        <img src="images/services_Images/EDI/d2.webp" alt="Delivery Image" width="600" height="600" class="img-fluid project-image" style="border-radius: 15px;">
       </div>
         <div class="project-content">
           <p >In the manufacturing sector, SMI utilized the Smooks data integration tool to efficiently convert EDI files into comma-separated (CSV) formats. Through the use of Java scripts, large volumes of CSV files were loaded into the database in seconds. The system can import very large CSV files in under 60 seconds, delivering significant time savings to the client.</p>
@@ -449,7 +449,7 @@ Icon for services and Projects -->
       <div class="modal-body project-modal-body">
         <!-- Image Section (Left) -->
         <div class="project-image-container">
-          <img src="images/services_Images/EDI/d3.jpg" alt="automobileModalLabel" class="img-fluid project-image">
+          <img src="images/services_Images/EDI/d3.webp" alt="automobileModalLabel" class="img-fluid project-image">
         </div>
         <!-- Text Section (Right) -->
         <div class="project-content">
