--- a/asset-tracking-with-ble-beacon.html
+++ b/asset-tracking-with-ble-beacon.html
@@ -113,7 +113,7 @@
 
 <!--hero section start-->
 
-<div class="pbanner-container" style="background-image: url('images/bg/asset-banner.jpg'); background-size: cover; background-position: center; background-repeat: no-repeat;">
+<div class="pbanner-container" style="background-image: url('images/bg/asset-banner.webp'); background-size: cover; background-position: center; background-repeat: no-repeat;">
     <!-- Content Section -->
     <div class="pbanner-content">
         <h4 class="pbanner-title">Asset Tracking with Ble Beacon</h4>
@@ -177,7 +177,7 @@
 
       <!-- Right Side: Infographic -->
       <div class="intro-image-container-bleIntro">
-        <img src="images/innomaint/ble-intro.jpeg" alt="BLE/RFID Infographic" class="intro-image-bleIntro">
+        <img src="images/innomaint/ble-intro.webp" alt="BLE/RFID Infographic" class="intro-image-bleIntro">
       </div>
     </div>
   </section>
@@ -326,49 +326,51 @@
 <!--blog end-->
 
 <!-- awards section starts -->
-
-<!-- Award and client section -->
 <section class="pt-0 text-center awards-iot-bg">
-    <h6 class="award-iot-title"style=" text-align: center; font-size:40px;padding-top:40px;padding-bottom:40px;line-height:30px">Awards & Recognitions</h6>
-    <div class="container pb-4">
-      <div class="row">
-        <div class="col">
-          <div class="owl-carousel no-pb" data-center="true" data-dots="false" data-items="5" data-xxl-items="5" data-xl-items="5" data-lg-items="4" data-md-items="3" data-sm-items="2" data-autoplay="true">
-            <div class="item">
+    <h6 class="award-iot-title" style=" text-align: center; font-size:40px;padding-top:40px;padding-bottom:40px;">
+        Awards & Recognitions</h6>
+    <div class="container">
+        <div class="row">
+            <div class="col">
+                <div class="owl-carousel no-pb" data-center="true" data-dots="false" data-items="5"
+                    data-xxl-items="5" data-xl-items="5" data-lg-items="4" data-md-items="3" data-sm-items="2"
+                    data-autoplay="true">
+                    <div class="item">
+                        <div class="client-logo">
+                            <img src="images/Innomiant solutions/iot-award-1.webp" class="img-fluid d-inline" alt="">
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div class="client-logo">
+                            <img src="images/Innomiant solutions/iot-award-2.webp" class="img-fluid d-inline" alt="">
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div class="client-logo">
+                            <img src="images/Innomiant solutions/iot-award-3.webp" class="img-fluid d-inline" alt="">
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div class="client-logo">
+                            <img src="images/Innomiant solutions/iot-award-4.webp" class="img-fluid d-inline" alt="">
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div class="client-logo">
+                            <img src="images/Innomiant solutions/iot-award-5.webp" class="img-fluid d-inline" alt="">
+                        </div>
+                    </div>
+                    <!-- <div class="item">
               <div class="client-logo">
-                <img src="images/client/asset-client-1.webp" class="img-fluid d-inline" alt="">
+                <img src="images/client/06.png" class="img-fluid d-inline" alt="">
               </div>
+            </div> -->
+                </div>
             </div>
-            <div class="item">
-              <div class="client-logo">
-                <img src="images/client/02.png" class="img-fluid d-inline" alt="">
-              </div>
-            </div>
-            <div class="item">
-              <div class="client-logo">
-                <img src="images/client/asset-client-2.webp" class="img-fluid d-inline" alt="">
-              </div>
-            </div>
-            <div class="item">
-              <div class="client-logo">
-                <img src="images/client/asset-client-3.webp" class="img-fluid d-inline" alt="">
-              </div>
-            </div>
-            <div class="item">
-              <div class="client-logo">
-                <img src="images/client/asset-client-4.webp" class="img-fluid d-inline" alt="">
-              </div>
-            </div>
-            <div class="item">
-              <div class="client-logo">
-                <img src="images/client/asset-client-5.webp" class="img-fluid d-inline" alt="">
-              </div>
-            </div>
-          </div>
         </div>
-      </div>
     </div>
-  </section>
+</section>
+
 
 <!-- awards section ends -->
 
