--- a/Ruby-on-Rails.html
+++ b/Ruby-on-Rails.html
@@ -123,7 +123,7 @@ Icon for services and Projects -->
 </section> -->
 
 <section class="banner py-0">
-  <div class="banner-img" style="background-image: url('images/services_Images/Rubyonrails/image.png');">
+  <div class="banner-img" style="background-image: url('images/services_Images/Rubyonrails/image.webp');">
     <div class="banner-content">
       <div class="container">
         <div class="row justify-content-center text-center">
@@ -319,7 +319,7 @@ Icon for services and Projects -->
                     <div class="item">
                         <div class="service-item style-2">
                             <div class="service-image">
-                                <img src="images/services_Images/Rubyonrails/p1.png" class="img-fluid" alt="Mobile Development">
+                                <img src="images/services_Images/Rubyonrails/p1.webp" class="img-fluid" alt="Mobile Development">
                             </div>
                             <div class="service-desc">
                                 <h4><a href="">Student Success Suite</a></h4>
@@ -339,7 +339,7 @@ Icon for services and Projects -->
                     <div class="item">
                         <div class="service-item style-2">
                             <div class="service-image">
-                                <img src="images/services_Images/Rubyonrails/p2.png" class="img-fluid" alt="Social Media Marketing">
+                                <img src="images/services_Images/Rubyonrails/p2.webp" class="img-fluid" alt="Social Media Marketing">
                             </div>
                             <div class="service-desc">
                                 <h4><a href="#">Online Video Course Platform</a></h4>
@@ -359,7 +359,7 @@ Icon for services and Projects -->
                     <div class="item">
                         <div class="service-item style-2">
                             <div class="service-image">
-                                <img src="images/services_Images/Rubyonrails/p3.png" class="img-fluid" alt="Automobile">
+                                <img src="images/services_Images/Rubyonrails/p3.webp" class="img-fluid" alt="Automobile">
                             </div>
                             <div class="service-desc">
                                 <h4><a href="">Health Systems - Provider App</a></h4>
@@ -401,7 +401,7 @@ Icon for services and Projects -->
             <!-- Webex Service Item -->
             <div class="service-item1 style-1">
               <div class="service-image">
-                <img src="images/services_Images/Rubyonrails/support.png" class="img-fluid" alt="" decoding="async">
+                <img src="images/services_Images/Rubyonrails/support.webp" class="img-fluid" alt="" decoding="async">
               </div>
               <div class="service-desc">
                 <div class="service-title">
@@ -419,7 +419,7 @@ Icon for services and Projects -->
             <!-- ERP Application Service Item -->
             <div class="service-item1 style-1">
               <div class="service-image">
-                <img src="images/services_Images/Rubyonrails/improve.png" class="img-fluid" alt="">
+                <img src="images/services_Images/Rubyonrails/improve.webp" class="img-fluid" alt="">
               </div>
               <div class="service-desc">
                 <div class="service-title">
@@ -437,7 +437,7 @@ Icon for services and Projects -->
             <!-- DOM Service Item (Active) -->
             <div class="service-item1 style-1 active">
               <div class="service-image">
-                <img src="images/services_Images/Rubyonrails/trans.png" class="img-fluid" alt="">
+                <img src="images/services_Images/Rubyonrails/trans.webp" class="img-fluid" alt="">
               </div>
               <div class="service-desc">
                 <div class="service-title">
@@ -473,7 +473,7 @@ Icon for services and Projects -->
       </div>
       <div class="modal-body project-modal-body">
         <div class="project-image-container">
-          <img src="images/services_Images/Rubyonrails/p1.png" alt="Student Success Suite Image" width="600" height="600" class="img-fluid project-image" style="border-radius: 15px;">
+          <img src="images/services_Images/Rubyonrails/p1.webp" alt="Student Success Suite Image" width="600" height="600" class="img-fluid project-image" style="border-radius: 15px;">
         </div>
         <div class="project-content">
           <p>
@@ -495,7 +495,7 @@ Icon for services and Projects -->
       </div>
       <div class="modal-body project-modal-body">
         <div class="project-image-container">
-          <img src="images/services_Images/Rubyonrails/p2.png" alt="Online Video Course Platform Image" width="600" height="600" class="img-fluid project-image" style="border-radius: 15px;">
+          <img src="images/services_Images/Rubyonrails/p2.webp" alt="Online Video Course Platform Image" width="600" height="600" class="img-fluid project-image" style="border-radius: 15px;">
         </div>
         <div class="project-content">
           <p>
@@ -517,7 +517,7 @@ Icon for services and Projects -->
       </div>
       <div class="modal-body project-modal-body">
         <div class="project-image-container">
-          <img src="images/services_Images/Rubyonrails/p3.png" alt="Health Systems Image" width="600" height="600" class="img-fluid project-image" style="border-radius: 15px;">
+          <img src="images/services_Images/Rubyonrails/p3.webp" alt="Health Systems Image" width="600" height="600" class="img-fluid project-image" style="border-radius: 15px;">
         </div>
         <div class="project-content">
           <p>
