--- a/index.html
+++ b/index.html
@@ -215,8 +215,8 @@
           </div>
         </div>
         <div class="video-bg">
-          <video width="100%" height="100%" autoplay loop muted playsinline>
-            <source src="images/home-banner-video.mp4" type="video/mp4" />
+          <video width="100%" height="100%" autoplay loop muted playsinline loading="lazy">
+            <source src="images/home-banner-video.webm" type="video/webm" />
             Your browser does not support the video tag.
           </video>
         </div>
