--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
                     <img src="./images/client/innomaint-logo.png" alt="Company 2" class="orgNew-logo" loading="lazy">
                   </div>
                 </div>
-                <div class="col-md-6 mt-5 mt-lg-0 org-box animate__animated" data-animate-on-view="image">
+                <div class="col-md-6 mt-5 mt-md-0 mt-lg-0 org-box animate__animated" data-animate-on-view="image">
                   <div class="featured-item style-3-f">
                     <img src="./images/client/bautomate-logo.png" alt="Company 3" class="orgNew-logo" loading="lazy">
                   </div>
