it governance training section overlap issue fixed

--- a/it-governance.html
+++ b/it-governance.html
@@ -978,6 +978,7 @@ document.querySelectorAll('.bar-fill').forEach(bar => {
     left: 33%;
     transform: translateY(200px); /* Move it further down */
     text-align: center;
+    margin-bottom: 50px;
   }
   
   .bottom-left {
@@ -1176,7 +1177,7 @@ document.querySelectorAll('.bar-fill').forEach(bar => {
   
   
   
-  <section class="form-container-unique">
+  <section class="form-container-unique" style="margin-top: 200px !important;">
     <div class="form-section-unique">
       <div class="text-side-unique">
         <h2 class="gradient-text-unique">We Connect Through You</h2>
