tab view changes

--- a/customer-relationship-management.html
+++ b/customer-relationship-management.html
@@ -1105,7 +1105,7 @@ Icon for services and Projects -->
                   </span>
                 </div>
                 <div class="service-image">
-                  <img src="images/innomaint/customer-relationship/d1.png" style="padding-top:30px;" class="img-fluid"
+                  <img src="images/innomaint/customer-relationship/d1.png" style="padding-top:30px;" class="img-fluid img-fluid-new"
                     alt="">
                 </div>
               </div>
@@ -1123,7 +1123,7 @@ Icon for services and Projects -->
                   </span>
                 </div>
                 <div class="service-image">
-                  <img src="images/innomaint/customer-relationship/d2.png" style="padding-top:30px;" class="img-fluid"
+                  <img src="images/innomaint/customer-relationship/d2.png" style="padding-top:30px;" class="img-fluid img-fluid-new"
                     alt="">
                 </div>
               </div>
@@ -1141,7 +1141,7 @@ Icon for services and Projects -->
                   </span>
                 </div>
                 <div class="service-image">
-                  <img src="images/innomaint/customer-relationship/d3.png" style="padding-top:30px;" class="img-fluid"
+                  <img src="images/innomaint/customer-relationship/d3.png" style="padding-top:30px;" class="img-fluid img-fluid-new"
                     alt="">
                 </div>
               </div>
@@ -1161,7 +1161,7 @@ Icon for services and Projects -->
                   </span>
                 </div>
                 <div class="service-image">
-                  <img src="images/innomaint/customer-relationship/d4.png" style="padding-top:30px;" class="img-fluid"
+                  <img src="images/innomaint/customer-relationship/d4.png" style="padding-top:30px;" class="img-fluid img-fluid-new"
                     alt="">
                 </div>
               </div>
@@ -1196,7 +1196,7 @@ Icon for services and Projects -->
                   </span>
                 </div>
                 <div class="service-image">
-                  <img src="images/innomaint/customer-relationship/d6.png" style="padding-top:30px;" class="img-fluid"
+                  <img src="images/innomaint/customer-relationship/d6.png" style="padding-top:30px;" class="img-fluid img-fluid-new"
                     alt="">
                 </div>
               </div>
@@ -1215,7 +1215,7 @@ Icon for services and Projects -->
                   </span>
                 </div>
                 <div class="service-image">
-                  <img src="images/innomaint/customer-relationship/d7.png" style="padding-top:30px;" class="img-fluid"
+                  <img src="images/innomaint/customer-relationship/d7.png" style="padding-top:30px;" class="img-fluid img-fluid-new"
                     alt="">
                 </div>
               </div>
@@ -1234,7 +1234,7 @@ Icon for services and Projects -->
                   </span>
                 </div>
                 <div class="service-image">
-                  <img src="images/innomaint/customer-relationship/d5.png" style="padding-top:30px;" class="img-fluid"
+                  <img src="images/innomaint/customer-relationship/d5.png" style="padding-top:30px;" class="img-fluid img-fluid-new"
                     alt="">
                 </div>
               </div>
@@ -1254,7 +1254,7 @@ Icon for services and Projects -->
                   </span>
                 </div>
                 <div class="service-image">
-                  <img src="images/innomaint/customer-relationship/d8.png" style="padding-top:30px;" class="img-fluid"
+                  <img src="images/innomaint/customer-relationship/d8.png" style="padding-top:30px;" class="img-fluid img-fluid-new"
                     alt="">
                 </div>
               </div>
