--- a/accounts-payable-automation.html
+++ b/accounts-payable-automation.html
@@ -204,7 +204,7 @@ Icon for services and Projects -->
   }
 
   .banner-content h2 {
-    font-size: 24px; /* Adjust heading size for tablets */
+    font-size: 34px; /* Adjust heading size for tablets */
   }
 
   .banner-content p {
@@ -922,6 +922,13 @@ document.addEventListener("DOMContentLoaded", () => {
       .timeline-content p {
           font-size: 0.9em;
       }
+  }
+
+  @media screen and (max-width: 968px){
+    .timeline-container{
+      width: 90%;
+      margin-left: 4%;
+    }
   }
 
 
