--- a/cloud-infrastructure.html
+++ b/cloud-infrastructure.html
@@ -198,7 +198,7 @@ Icon for services and Projects -->
           </div>
 
           <!-- Third Card -->
-          <div class="col-lg-3 col-md-6">
+          <div class="col-lg-3 col-md-6 mt-md-5 mt-lg-0 mt-xl-0">
               <div class="featured-item style-4">
                   <div class="featured-icon">
                     <i class="fi fi-rr-shield-check"></i>
