--- a/freight-forwarding-automation.html
+++ b/freight-forwarding-automation.html
@@ -339,7 +339,7 @@
                             </span>
                         </div>
                         <div class="service-image">
-                            <img src="images/bautomate-main/freight_forward-1.png" class="img-fluid" alt="">
+                            <img src="images/bautomate-main/freight_forward-1.png" class="img-fluid img-fluid-new" alt="">
                         </div>
                     </div>
   
@@ -356,7 +356,7 @@
                             </span>
                         </div>
                         <div class="service-image">
-                            <img src="images/bautomate-main/freight_forward-2.png" class="img-fluid" alt="">
+                            <img src="images/bautomate-main/freight_forward-2.png" class="img-fluid img-fluid-new" alt="">
                         </div>
                     </div>
   
@@ -371,7 +371,7 @@
                               </span>
                         </div>
                         <div class="service-image">
-                            <img src="images/bautomate-main/freight_forward-3.png" class="img-fluid" alt="">
+                            <img src="images/bautomate-main/freight_forward-3.png" class="img-fluid img-fluid-new" alt="">
                         </div>
                     </div>
 
@@ -386,7 +386,7 @@
                             </span>
                         </div>
                         <div class="service-image">
-                            <img src="images/bautomate-main/freight_forward-4.png" class="img-fluid" alt="">
+                            <img src="images/bautomate-main/freight_forward-4.png" class="img-fluid img-fluid-new" alt="">
                         </div>
                     </div>
 
@@ -401,7 +401,7 @@
                             </span>
                         </div>
                         <div class="service-image">
-                            <img src="images/bautomate-main/freight_forward-5.png" class="img-fluid" alt="">
+                            <img src="images/bautomate-main/freight_forward-5.png" class="img-fluid img-fluid-new" alt="">
                         </div>
                     </div>
   
