--- a/iot-solutions.html
+++ b/iot-solutions.html
@@ -177,7 +177,7 @@
         <div class="row">
           <div class="col-lg-4 col-md-12">
             <div class="featured-item style-3">
-              <div class="featured-icon">
+              <div class="featured-icon" style="padding-right: 30px;">
                 <i class="fas fa-box"></i>
 
               </div>
@@ -192,7 +192,7 @@
           </div>
           <div class="col-lg-4 col-md-12 mt-5 mt-lg-0">
             <div class="featured-item style-3">
-              <div class="featured-icon">
+              <div class="featured-icon" style="padding-right: 30px;">
                 <i class="fas fa-tachometer-alt"></i>
               </div>
               <div class="featured-desc">
@@ -206,7 +206,7 @@
           </div>
           <div class="col-lg-4 col-md-12 mt-5 mt-lg-0">
             <div class="featured-item style-3">
-              <div class="featured-icon">
+              <div class="featured-icon" style="padding-right: 30px;">
                 <i class="fas fa-heartbeat"></i>
               </div>
               <div class="featured-desc">
@@ -264,7 +264,7 @@
                   </span>
                 </div>
                 <div class="service-image">
-                  <img src="images/Innomiant solutions/Usecase-1.png" style="padding-top:30px;" class="img-fluid"
+                  <img src="images/Innomiant solutions/Usecase-1.png" style="padding-top:30px;" class="img-fluid img-fluid-new"
                     alt="">
                 </div>
               </div>
@@ -281,7 +281,7 @@
                   </span>
                 </div>
                 <div class="service-image">
-                  <img src="images/Innomiant solutions/Usecase-2.png" style="padding-top:30px;" class="img-fluid"
+                  <img src="images/Innomiant solutions/Usecase-2.png" style="padding-top:30px;" class="img-fluid img-fluid-new"
                     alt="">
                 </div>
               </div>
@@ -298,7 +298,7 @@
                   </span>
                 </div>
                 <div class="service-image">
-                  <img src="images/Innomiant solutions/Usecase-3.png" style="padding-top:30px;" class="img-fluid"
+                  <img src="images/Innomiant solutions/Usecase-3.png" style="padding-top:30px;" class="img-fluid img-fluid-new"
                     alt="">
                 </div>
               </div>
@@ -315,7 +315,7 @@
                   </span>
                 </div>
                 <div class="service-image">
-                  <img src="images/Innomiant solutions/Usecase-4.png" style="padding-top:30px;" class="img-fluid"
+                  <img src="images/Innomiant solutions/Usecase-4.png" style="padding-top:30px;" class="img-fluid img-fluid-new"
                     alt="">
                 </div>
               </div>
@@ -349,7 +349,7 @@
                   </span>
                 </div>
                 <div class="service-image">
-                  <img src="images/Innomiant solutions/Usecase-5.png" style="padding-top:30px;" class="img-fluid"
+                  <img src="images/Innomiant solutions/Usecase-5.png" style="padding-top:30px;" class="img-fluid img-fluid-new"
                     alt="">
                 </div>
               </div>
@@ -366,7 +366,7 @@
                   </span>
                 </div>
                 <div class="service-image">
-                  <img src="images/Innomiant solutions/Usecase-6.png" style="padding-top:30px;" class="img-fluid"
+                  <img src="images/Innomiant solutions/Usecase-6.png" style="padding-top:30px;" class="img-fluid img-fluid-new"
                     alt="">
                 </div>
               </div>
@@ -384,7 +384,7 @@
                   </span>
                 </div>
                 <div class="service-image">
-                  <img src="images/Innomiant solutions/Usecase-7.png" style="padding-top:30px;" class="img-fluid"
+                  <img src="images/Innomiant solutions/Usecase-7.png" style="padding-top:30px;" class="img-fluid img-fluid-new"
                     alt="">
                 </div>
               </div>
@@ -402,7 +402,7 @@
                   </span>
                 </div>
                 <div class="service-image">
-                  <img src="images/Innomiant solutions/Usecase-8.png" style="padding-top:30px;" class="img-fluid"
+                  <img src="images/Innomiant solutions/Usecase-8.png" style="padding-top:30px;" class="img-fluid img-fluid-new"
                     alt="">
                 </div>
               </div>
