--- a/oee-monitoring.html
+++ b/oee-monitoring.html
@@ -313,7 +313,7 @@
                 </div>
               </div>
 
-              <div class="col-lg-3 col-md-6 mt-5 mt-lg-0">
+              <div class="col-lg-3 col-md-6 mt-md-4 mt-xl-0 mt-lg-0">
                 <div class="featured-item style-4">
                   <div class="featured-icon">
                     <i class="fi fi-rr-clock-up-arrow"></i>
@@ -332,7 +332,7 @@
               </div>
 
               <!-- Second Row -->
-              <div class="col-lg-3 col-md-6">
+              <div class="col-lg-3 col-md-6 mt-md-4 mt-lg-0 mt-xl-0">
                 <div class="featured-item style-4">
                   <div class="featured-icon">
                     <i class="fi fi-rs-newspaper"></i>
