--- a/offshore-software-development.html
+++ b/offshore-software-development.html
@@ -205,7 +205,7 @@ Icon for services and Projects -->
           </div>
 
           <!-- Third Card -->
-          <div class="col-lg-4 col-md-6">
+          <div class="col-lg-4 col-md-6 mt-md-5 mt-lg-0 mt-xl-0">
               <div class="featured-item style-4">
                   <div class="featured-icon">
                     <i class="fi fi-rr-operation"></i>
