--- a/pricing-automation.html
+++ b/pricing-automation.html
@@ -601,7 +601,7 @@ Icon for services and Projects -->
               <!-- Webex Service Item -->
               <div class="service-item1 style-1">
                 <div class="service-image">
-                  <img src="images/Bautomate/p-b-1.jpg" class="img-fluid" alt="" decoding="async">
+                  <img src="images/Bautomate/p-b-1.jpg" class="img-fluid img-fluid-new" alt="" decoding="async">
                 </div>
                 <div class="service-desc">
                   <div class="service-title">
@@ -619,7 +619,7 @@ Icon for services and Projects -->
               <!-- ERP Application Service Item -->
               <div class="service-item1 style-1">
                 <div class="service-image">
-                  <img src="images/Bautomate/p-b-2.jpg" class="img-fluid" alt="">
+                  <img src="images/Bautomate/p-b-2.jpg" class="img-fluid img-fluid-new" alt="">
                 </div>
                 <div class="service-desc">
                   <div class="service-title">
@@ -638,7 +638,7 @@ Icon for services and Projects -->
               <!-- DOM Service Item (Active) -->
               <div class="service-item1 style-1 active">
                 <div class="service-image">
-                  <img src="images/Bautomate/p-b-3.jpg" class="img-fluid" alt="">
+                  <img src="images/Bautomate/p-b-3.jpg" class="img-fluid img-fluid-new" alt="">
                 </div>
                 <div class="service-desc">
                   <div class="service-title">
@@ -656,7 +656,7 @@ Icon for services and Projects -->
               <!-- DOM Service Item (Active) -->
               <div class="service-item1 style-1 active">
                 <div class="service-image">
-                  <img src="images/Bautomate/p-b-4.jpg" class="img-fluid" alt="">
+                  <img src="images/Bautomate/p-b-4.jpg" class="img-fluid img-fluid-new" alt="">
                 </div>
                 <div class="service-desc">
                   <div class="service-title">
@@ -674,7 +674,7 @@ Icon for services and Projects -->
               <!-- DOM Service Item (Active) -->
               <div class="service-item1 style-1 active">
                 <div class="service-image">
-                  <img src="images/Bautomate/p-b-5.jpg" class="img-fluid" alt="">
+                  <img src="images/Bautomate/p-b-5.jpg" class="img-fluid img-fluid-new" alt="">
                 </div>
                 <div class="service-desc">
                   <div class="service-title">
@@ -836,6 +836,29 @@ Icon for services and Projects -->
           })
           .catch(error => console.error('Error loading the header:', error));
   });
+</script>
+
+<script>
+  function openTab(tabId) {
+  const tabs = document.querySelectorAll(".tab-content-pworks");
+  const buttons = document.querySelectorAll(".tab-button-pworks");
+
+  tabs.forEach(tab => {
+    tab.classList.remove("active-pworks");
+    tab.style.opacity = "0"; // Reset opacity for animation
+  });
+
+  buttons.forEach(button => button.classList.remove("active-pworks"));
+
+  const currentTab = document.getElementById(tabId);
+  currentTab.classList.add("active-pworks");
+  event.currentTarget.classList.add("active-pworks");
+
+  // Add delay to apply animation
+  setTimeout(() => {
+    currentTab.style.opacity = "1";
+  }, 0);
+}
 </script>
 
 <!-- inject js end -->
