--- a/web-and-mobile-application.html
+++ b/web-and-mobile-application.html
@@ -202,7 +202,7 @@ Icon for services and Projects -->
           </div>
 
           <!-- Third Card -->
-          <div class="col-lg-3 col-md-6">
+          <div class="col-lg-3 col-md-6 mt-md-5 mt-lg-0 mt-xl-0">
               <div class="featured-item style-4">
                   <div class="featured-icon">
                     <i class="fi fi-rs-shield-check"></i>
@@ -218,7 +218,7 @@ Icon for services and Projects -->
           </div>
 
            <!-- fourth Card -->
-           <div class="col-lg-3 col-md-6">
+           <div class="col-lg-3 col-md-6 mt-md-5 mt-lg-0 mt-xl-0">
             <div class="featured-item style-4">
                 <div class="featured-icon">
                     <i class="fi fi-rs-dashboard-monitor"></i>
