--- a/bigdata-consulting-services.html
+++ b/bigdata-consulting-services.html
@@ -267,7 +267,7 @@
           <!-- Webex Service Item -->
           <div class="service-item1 style-1">
             <div class="service-image">
-              <img src="images/services/it-solutions.webp" class="img-fluid" alt="" decoding="async">
+              <img src="images/services/it-solutions.webp" class="img-fluid drive-projects-img" alt="" decoding="async">
             </div>
             <div class="service-desc">
               <div class="service-title">
@@ -285,7 +285,7 @@
           <!-- ERP Application Service Item -->
           <div class="service-item1 style-1">
             <div class="service-image">
-              <img src="images/services/transparency.webp" class="img-fluid" alt="">
+              <img src="images/services/transparency.webp" class="img-fluid drive-projects-img" alt="">
             </div>
             <div class="service-desc">
               <div class="service-title">
@@ -303,7 +303,7 @@
           <!-- DOM Service Item (Active) -->
           <div class="service-item1 style-1 active">
             <div class="service-image">
-              <img src="images/services/billing.webp" class="img-fluid" alt="">
+              <img src="images/services/billing.webp" class="img-fluid drive-projects-img" alt="">
             </div>
             <div class="service-desc">
               <div class="service-title">
