--- a/business-intelligence-services.html
+++ b/business-intelligence-services.html
@@ -497,7 +497,7 @@
             <!-- Agile Methodology Service Item -->
             <div class="service-item1 style-1">
               <div class="service-image">
-                <img src="images/business-intelligence-services/d1.webp" class="img-fluid" alt="" decoding="async">
+                <img src="images/business-intelligence-services/d1.webp" class="img-fluid drive-projects-img" alt="" decoding="async">
               </div>
               <div class="service-desc">
                 <div class="service-title">
@@ -515,7 +515,7 @@
             <!-- Easy Accessibility Service Item -->
             <div class="service-item1 style-1">
               <div class="service-image">
-                <img src="images/business-intelligence-services/d2.webp" class="img-fluid" alt="">
+                <img src="images/business-intelligence-services/d2.webp" class="img-fluid drive-projects-img" alt="">
               </div>
               <div class="service-desc">
                 <div class="service-title">
@@ -533,7 +533,7 @@
             <!-- Cost-Efficient Solutions Service Item -->
             <div class="service-item1 style-1 active">
               <div class="service-image">
-                <img src="images/business-intelligence-services/d3.webp" class="img-fluid" alt="">
+                <img src="images/business-intelligence-services/d3.webp" class="img-fluid drive-projects-img" alt="">
               </div>
               <div class="service-desc">
                 <div class="service-title">
@@ -568,7 +568,7 @@
       </div>
       <div class="modal-body project-modal-body">
         <div class="project-image-container">
-          <img src="images/business-intelligence-services/p1.png" alt="Transparency Image" class="img-fluid project-image">
+          <img src="images/business-intelligence-services/p1.webp" alt="Transparency Image" class="img-fluid project-image">
         </div>
         <div class="project-content">
           <p>SMI BI consulting services offer advanced services for organizations and businesses, leveraging open technology-based business intelligence platforms.</p>
@@ -589,7 +589,7 @@
       </div>
       <div class="modal-body project-modal-body">
         <div class="project-image-container">
-          <img src="images/business-intelligence-services/p2.png" alt="Delivery Image" class="img-fluid project-image">
+          <img src="images/business-intelligence-services/p2.webp" alt="Delivery Image" class="img-fluid project-image">
         </div>
         <div class="project-content">
           <p>SMI Business intelligence (BI) as a Service supports businesses to get an end-to-end service that manages the extraction, organization, and maintenance of data.</p>
@@ -609,7 +609,7 @@
       </div>
       <div class="modal-body project-modal-body">
         <div class="project-image-container">
-          <img src="images/business-intelligence-services/p3.png" alt="Scalability Image" class="img-fluid project-image">
+          <img src="images/business-intelligence-services/p3.webp" alt="Scalability Image" class="img-fluid project-image">
         </div>
         <div class="project-content">
           <p>SMI provides a cost-effective and riskless service, Our Business intelligence implementation specialists can support the businesses to reach their goals quickly and successfully.</p>
@@ -628,7 +628,7 @@
         </div>
         <div class="modal-body project-modal-body">
           <div class="project-image-container">
-            <img src="images/business-intelligence-services/p4.png" alt="Scalability Image" class="img-fluid project-image">
+            <img src="images/business-intelligence-services/p4.webp" alt="Scalability Image" class="img-fluid project-image">
           </div>
           <div class="project-content">
             <p>SMI will improve your business to make better decisions by providing in-depth analysis and expert-level business intelligence services and support.</p>
