--- a/iot-development.html
+++ b/iot-development.html
@@ -419,7 +419,7 @@
           <!-- Agile Methodology Service Item -->
           <div class="service-item1 style-1">
             <div class="service-image">
-              <img src="images/services_Images/IOT/d1.webp" class="img-fluid" alt="" decoding="async">
+              <img src="images/services_Images/IOT/d1.webp" class="img-fluid drive-projects-img" alt="" decoding="async">
             </div>
             <div class="service-desc">
               <div class="service-title">
@@ -437,7 +437,7 @@
           <!-- Easy Accessibility Service Item -->
           <div class="service-item1 style-1">
             <div class="service-image">
-              <img src="images/services_Images/IOT/d2.webp" class="img-fluid" alt="">
+              <img src="images/services_Images/IOT/d2.webp" class="img-fluid drive-projects-img" alt="">
             </div>
             <div class="service-desc">
               <div class="service-title">
@@ -455,7 +455,7 @@
           <!-- Cost-Efficient Solutions Service Item -->
           <div class="service-item1 style-1 active">
             <div class="service-image">
-              <img src="images/services_Images/IOT/d3.webp" class="img-fluid" alt="">
+              <img src="images/services_Images/IOT/d3.webp" class="img-fluid drive-projects-img" alt="">
             </div>
             <div class="service-desc">
               <div class="service-title">
