--- a/software-testing.html
+++ b/software-testing.html
@@ -402,7 +402,7 @@ Icon for services and Projects -->
           <!-- Webex Service Item -->
           <div class="service-item1 style-1">
             <div class="service-image">
-              <img src="images/services_Images/SoftwareTesting/affordable.webp" class="img-fluid" alt="" decoding="async">
+              <img src="images/services_Images/SoftwareTesting/affordable.webp" class="img-fluid drive-projects-img" alt="" decoding="async">
             </div>
             <div class="service-desc">
               <div class="service-title">
@@ -422,7 +422,7 @@ Icon for services and Projects -->
           <!-- ERP Application Service Item -->
           <div class="service-item1 style-1">
             <div class="service-image">
-              <img src="images/services_Images/EIS/delivery1.webp" class="img-fluid" alt="">
+              <img src="images/services_Images/EIS/delivery1.webp" class="img-fluid drive-projects-img" alt="">
             </div>
             <div class="service-desc">
               <div class="service-title">
@@ -442,7 +442,7 @@ Icon for services and Projects -->
           <!-- DOM Service Item (Active) -->
           <div class="service-item1 style-1 active">
             <div class="service-image">
-              <img src="images/services_Images/SoftwareTesting/expertise.webp" class="img-fluid" alt="">
+              <img src="images/services_Images/SoftwareTesting/expertise.webp" class="img-fluid drive-projects-img" alt="">
             </div>
             <div class="service-desc">
               <div class="service-title">
