--- a/visitor-management-system-software.html
+++ b/visitor-management-system-software.html
@@ -55,7 +55,8 @@
     <!-- innomiant solution for css -->
     <link href="css/innomiant.css" rel="stylesheet" type="text/css" />
     <link href="css/home.css" rel="stylesheet" type="text/css" />
-    <link href="css/popup.css" rel="stylesheet" type="text/css" />
+    <link href="css/product-banner.css" rel="stylesheet" type="text/css" />
+ 
     <!-- contact icon  -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
@@ -748,7 +749,7 @@
         <!-- Use cases section for iot -->
 
 
-
+    
 
         <!-- Use case section with Load More button -->
         <section class="pt-10">
@@ -767,7 +768,7 @@
                             <!-- First 4 use case items -->
                             <div class="service-item1 style-1">
                                 <div class="service-image">
-                                    <img src="images/Innomiant solutions/visitor-usecase-1.webp" class="img-fluid usecase-center"
+                                    <img src="images/Innomiant solutions/visitor-usecase-1.webp" class="img-fluid usecase-center drive-projects-img "
                                         alt="" decoding="async">
                                 </div>
                                 <div class="service-desc">
@@ -784,7 +785,7 @@
                             <!-- Add the rest of the initial 4 items -->
                             <div class="service-item1 style-1">
                                 <div class="service-image">
-                                    <img src="images/Innomiant solutions/visitor-usecase-2.webp" class="img-fluid" alt="">
+                                    <img src="images/Innomiant solutions/visitor-usecase-2.webp" class="img-fluid drive-projects-img" alt="">
                                 </div>
                                 <div class="service-desc">
                                     <div class="service-title">
@@ -802,7 +803,7 @@
 
                             <div class="service-item1 style-1">
                                 <div class="service-image">
-                                    <img src="images/Innomiant solutions/visitor-usecase-3.webp" class="img-fluid" alt="">
+                                    <img src="images/Innomiant solutions/visitor-usecase-3.webp" class="img-fluid  drive-projects-img" alt="">
                                 </div>
                                 <div class="service-desc">
                                     <div class="service-title">
