--- a/enquiry-automation.html
+++ b/enquiry-automation.html
@@ -256,7 +256,7 @@
                             </span>
                         </div>
                         <div class="service-image">
-                            <img src="images/bautomate-main/enquiry-benefits-1.webp" class="img-fluid" alt="">
+                            <img src="images/bautomate-main/enquiry-benefits-1.webp" class="img-fluid drive-projects-img" alt="">
                         </div>
                     </div>
   
@@ -273,7 +273,7 @@
                             </span>
                         </div>
                         <div class="service-image">
-                            <img src="images/bautomate-main/enquiry-benefits-2.webp" class="img-fluid" alt="">
+                            <img src="images/bautomate-main/enquiry-benefits-2.webp" class="img-fluid drive-projects-img" alt="">
                         </div>
                     </div>
   
@@ -288,7 +288,7 @@
                             </span>
                         </div>
                         <div class="service-image">
-                            <img src="images/bautomate-main/enquiry-benefits-3.webp" class="img-fluid" alt="">
+                            <img src="images/bautomate-main/enquiry-benefits-3.webp" class="img-fluid drive-projects-img" alt="">
                         </div>
                     </div>
 
@@ -303,7 +303,7 @@
                             </span>
                         </div>
                         <div class="service-image">
-                            <img src="images/bautomate-main/enquiry-benefits-4.webp" class="img-fluid" alt="">
+                            <img src="images/bautomate-main/enquiry-benefits-4.webp" class="img-fluid drive-projects-img" alt="">
                         </div>
                     </div>
 
@@ -318,11 +318,9 @@
                             </span>
                         </div>
                         <div class="service-image">
-                            <img src="images/bautomate-main/enquiry-benefits-5.webp" class="img-fluid" alt="">
+                            <img src="images/bautomate-main/enquiry-benefits-5.webp" class="img-fluid drive-projects-img" alt="">
                         </div>
-                    </div>
-  
-                   
+                    </div>            
                 </div>
             </div>
         </div>
@@ -330,8 +328,6 @@
     </div>
   </section>
   
-
-   
     <section class="automation-section">
         <h2 class="automation-title">
           Bautomate’s Tremendous Automation Technologies in 
