--- a/managedIT.html
+++ b/managedIT.html
@@ -284,7 +284,7 @@
           <!-- Agile Methodology Service Item -->
           <div class="service-item1 style-1">
             <div class="service-image">
-              <img src="images/services_Images/ManagedIT/d1.webp" class="img-fluid" alt="" decoding="async">
+              <img src="images/services_Images/ManagedIT/d1.webp" class="img-fluid drive-projects-img" alt="" decoding="async">
             </div>
             <div class="service-desc">
               <div class="service-title">
@@ -302,7 +302,7 @@
           <!-- Easy Accessibility Service Item -->
           <div class="service-item1 style-1">
             <div class="service-image">
-              <img src="images/services_Images/ManagedIT/d2.webp" class="img-fluid" alt="">
+              <img src="images/services_Images/ManagedIT/d2.webp" class="img-fluid drive-projects-img" alt="">
             </div>
             <div class="service-desc">
               <div class="service-title">
@@ -320,7 +320,7 @@
           <!-- Cost-Efficient Solutions Service Item -->
           <div class="service-item1 style-1 active">
             <div class="service-image">
-              <img src="images/services_Images/ManagedIT/d3.webp" class="img-fluid" alt="">
+              <img src="images/services_Images/ManagedIT/d3.webp" class="img-fluid drive-projects-img" alt="">
             </div>
             <div class="service-desc">
               <div class="service-title">
