--- a/react-native-development.html
+++ b/react-native-development.html
@@ -64,14 +64,8 @@
 Icon for services and Projects -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flaticon@2.1.0/css/flaticon.min.css">
-
-
 <link href="css/service.css" rel="stylesheet" type="text/css" />
-
-<!-- innomiant solution for css -->
-<link href="css/innomiant.css" rel="stylesheet" type="text/css" />
-
-
+<link href="css/product-banner.css" rel="stylesheet" type="text/css" />
 
 </head>
 
