--- a/tech-talent-services.html
+++ b/tech-talent-services.html
@@ -347,6 +347,12 @@ Icon for services and Projects -->
             opacity: 0;
             transform: translateY(20px);
         }
+        @media screen and (min-width: 768px) and (max-width: 1024px) {
+          .service-card
+       {
+        max-width: 700px;
+       }
+       }
 
         .service-card.visible {
             opacity: 1;
