--- a/ui-ux-design.html
+++ b/ui-ux-design.html
@@ -384,7 +384,7 @@ Icon for services and Projects -->
           <!-- Webex Service Item -->
           <div class="service-item1 style-1">
             <div class="service-image">
-              <img src="images/services_Images/SoftwareTesting/expertise.webp" class="img-fluid" alt="" decoding="async">
+              <img src="images/services_Images/SoftwareTesting/expertise.webp" class="img-fluid drive-projects-img" alt="" decoding="async">
             </div>
             <div class="service-desc">
               <div class="service-title">
@@ -404,7 +404,7 @@ Icon for services and Projects -->
           <!-- ERP Application Service Item -->
           <div class="service-item1 style-1">
             <div class="service-image">
-              <img src="images/services_Images/UIUX/organize.webp" class="img-fluid" alt="">
+              <img src="images/services_Images/UIUX/organize.webp" class="img-fluid drive-projects-img" alt="">
             </div>
             <div class="service-desc">
               <div class="service-title">
@@ -424,7 +424,7 @@ Icon for services and Projects -->
           <!-- DOM Service Item (Active) -->
           <div class="service-item1 style-1 active">
             <div class="service-image">
-              <img src="images/services_Images/UIUX/simplicity.webp" class="img-fluid" alt="">
+              <img src="images/services_Images/UIUX/simplicity.webp" class="img-fluid drive-projects-img" alt="">
             </div>
             <div class="service-desc">
               <div class="service-title">
