tablet ONLY nav, remove animations

--- a/header.html
+++ b/header.html
@@ -82,11 +82,10 @@
 }
 
 
-    @media screen and (max-width: 1200px) {
+    @media screen and (max-width: 1200px) and (min-width: 768px) {
         .dropdown-menu-sub {
           transform: translateX(-20%);
           transition: all .3s ease !important;
-          transition-delay: 1s;
           border: 1px solid rgba(255 ,255, 255, .2);
           z-index: 9;
         }
